// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playground ex01 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { ex01 } = $r$({
    components: { ex01: \\"p1\\" },
    parts: { p1: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_1\\\\\\">Hello MXT!</div>\\\\n\\",
                attachTo: [{
                        id: \\"tagid_1\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        }
                    }]
            };
        } }
});
export { ex01 };
export default ex01;
"
`;

exports[`playground ex02 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { ex02 } = $r$({
    components: { ex02: \\"p2\\" },
    parts: { p2: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_2\\\\\\">Hello MXT!</div>\\\\n\\",
                attachTo: [{
                        id: \\"tagid_2\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        },
                        events: [{
                                name: \\"click\\",
                                flags: 0,
                                handler: ($ev$: Event, $dc$: any) => {
                                    const { colorClick } = $dc$.$data;
                                    colorClick.bind($dc$.$data)($ev$, $dc$.$data, $dc$);
                                }
                            }]
                    }]
            };
        } }
});
export { ex02 };
export default ex02;
"
`;

exports[`playground ex03 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { ex03 } = $r$({
    components: { ex03: \\"p3\\" },
    parts: { p3: $pf$ => {
            return {
                template: \\"\\\\n\\\\n    <style>\\\\n        div {\\\\n            background: #f0f0f0;\\\\n            cursor: pointer;\\\\n            box-sizing: content-box;\\\\n        }\\\\n\\\\n        div:hover {\\\\n            background: #e0e0f0;\\\\n        }\\\\n    </style>\\\\n\\\\n    <div id=\\\\\\"tagid_3\\\\\\">Hello MXT!</div>\\\\n\\",
                attachTo: [{
                        id: \\"tagid_3\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        },
                        events: [{
                                name: \\"click\\",
                                flags: 0,
                                handler: ($ev$: Event, $dc$: any) => {
                                    const { colorClick } = $dc$.$data;
                                    colorClick.bind($dc$.$data)($ev$, $dc$.$data, $dc$);
                                }
                            }]
                    }]
            };
        } }
});
export { ex03 };
export default ex03;
"
`;
